fix button alignment for input[type=submit]

--- a/source/sass/_forms.scss
+++ b/source/sass/_forms.scss
@@ -163,7 +163,7 @@ form.alt {
 
 form {
   .button-row p {
-    text-align: center;
+    text-align: center !important;
   }
 }
 
